syntax="proto3";

package rpc.mapreduce;

option go_package="it.uniroma2.dicii/rpc/mapreduce";

message Number {
  int32 num = 1;
}

message Status {
  int32 code = 1;
  string message = 2;
}

service MapperService {
  rpc Map(stream Number) returns (Status);
}

service ReducerService {
  rpc Reduce(stream Number) returns (Status);
}
